--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ dependencies = [
   "scipy~=1.15",
   "POT~=0.9.4",
   "matplotlib~=3.10.0",
-  "tqdm~=4.67.1"
+  "tqdm~=4.67.1",
   "json~=2.0.9"
 ]
 authors = [
